# Project_JusCash

./: README.md
api/: main.py  pyproject.toml
chatbot/: chatbot_cli.py
data/: EDA.ipynb  SPMQA Data Visualization - Sheet1.csv
model_ml/: XGBoost.pkl  random_forest_model.pkl  train_model.py
