[tool.poetry]
name = "chatbot_project_success"
version = "0.1.0"
description = "Chatbot with ML model for project success prediction"
authors = ["Seu Nome <seu@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
pandas = "^2.2.1"
scikit-learn = "^1.4.0"
xgboost = "^2.0.3"
joblib = "^1.3.2"
pydantic = "1.10.7"
transformers = "^4.24.0"  # A versão do transformers mais recente (ajuste conforme necessário)
torch = "^1.12.0"
openai = "1.93.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
